add the root file

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -7,7 +7,7 @@ max-width: 100%;
 height: auto;
 }
 .cbg-img{
-    background-image: url(../img/bus4.jpg);
+    background-image: url(../img/onlineseats.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-color: lightslategray;
