--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -21,7 +21,7 @@ height: auto;
 }
 form{ 
 
-   background-color: #FFFFCC;
+   background-color:RGB(170,213,219);
    margin: 5px;
    padding: 5px ;
    box-shadow: 5px #808080;
