--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,12 +1,17 @@
+#search{
+  background-color: white;
+}
+/*
 .bg-img{
-background-image: url(../img/bus3.jpg);
+background-image: url(../img/photo.avif);
 background-repeat: no-repeat;
 background-position: center; 
 background-color: lightslategray;
 max-width: 100%;
 height: auto;
 }
-.cbg-img{
+*/
+/*.cbg-img{
     background-image: url(../img/onlineseats.webp);
     background-repeat: no-repeat;
     background-position: center;
@@ -14,14 +19,14 @@ height: auto;
     max-width: 100%;
     height: auto;   
 }
+*/
 .title{
     text-align: center;
     margin-top: 5px;
-    background-color: #FFFFCC;
+    background-color: white;
 }
 form{ 
-
-   background-color:RGB(170,213,219);
+  background-color:RGB(170,213,219);
    margin: 5px;
    padding: 5px ;
    box-shadow: 5px #808080;
@@ -33,6 +38,40 @@ table{
 nav{
     position: sticky;
 }
-.footer{
-    background-color: yellow;
+.footer {
+    background-color: #343a40;
+    color: #fff;
+    padding: 20px 0;
+    text-align: center;
+  }
+  .footer-social-icons ul {
+    list-style: none;
+    padding: 0;
+    margin-bottom: 10px;
+  }
+  .footer-social-icons ul li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  .footer-social-icons ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+  }
+  .footer-social-icons ul li a:hover {
+    color: #ffd700;
+  }
+  .footer p {
+    margin: 0;
+    font-size: 14px;
+  }
+  .footer p a {
+    color: gold;
+    text-decoration: none;
+  }
+  .footer p a:hover {
+    text-decoration: underline;
+  }
+table,th,td{
+    padding:30px;
 }
