--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -26,7 +26,7 @@ height: auto;
     background-color: white;
 }
 form{ 
-  background-color:RGB(170,213,219);
+ /* background-color:RGB(170,213,219);*/
    margin: 5px;
    padding: 5px ;
    box-shadow: 5px #808080;
